# TD_CPP

Pokemon_LANGEVIN/Pokemon/: CMakeLists.txt  Card.cpp  Card.h  EnergyCard.cpp  EnergyCard.h  Player.cpp  Player.h  PokemonCard.cpp  PokemonCard.h  TrainerCard.cpp  TrainerCard.h  main.cpp
Timeseries_LANGEVIN/: CMakeLists.txt  main.cpp
Timeseries_LANGEVIN/series/: GaussianGenerator.cpp  GaussianGenerator.h  KNN.cpp  KNN.h  SinWaveGenerator.cpp  SinWaveGenerator.h  StepGenerator.cpp  StepGenerator.h  TimeSeriesDataset.cpp  TimeSeriesDataset.h  TimeSeriesGenerator.cpp  TimeSeriesGenerator.h
